--- a/money_repo/polls/templates/polls/index.html
+++ b/money_repo/polls/templates/polls/index.html
@@ -1,3 +1,25 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="utf-8">
+    <title>タイトルです</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+</head>
+<body>
+
+	<section class="hero is-dark">
+		<div class="hero-body">
+			<div class="container">
+			<h1 class="title">
+				heroを使ったタイトル
+			</h1>
+			<h2 class="subtitle is-6">
+				ヘッダは他に「navber」があるよ
+			</h2>
+			</div>
+		</div>
+	</section>
+	
 {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
@@ -7,3 +29,6 @@
 {% else %}
     <p>No polls are available.</p>
 {% endif %}
+
+</body>
+</html>
