rename polls -> cms

--- a/money_repo/cms/templates/index.html
+++ b/money_repo/cms/templates/index.html
@@ -11,7 +11,7 @@
 		<div class="hero-body">
 			<div class="container">
 			<h1 class="title">
-				heroを使ったタイトル
+				1heroを使ったタイトル
 			</h1>
 			<h2 class="subtitle is-6">
 				ヘッダは他に「navber」があるよ
@@ -20,15 +20,5 @@
 		</div>
 	</section>
 	
-{% if latest_question_list %}
-    <ul>
-    {% for question in latest_question_list %}
-        <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No polls are available.</p>
-{% endif %}
-
 </body>
 </html>
