--- a/money_repo/cms/templates/index.html
+++ b/money_repo/cms/templates/index.html
@@ -2,23 +2,43 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
-    <title>タイトルです</title>
+    <title>Money Report</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
 </head>
 <body>
 
-	<section class="hero is-dark">
+	<section class="hero is-primary">
 		<div class="hero-body">
 			<div class="container">
-			<h1 class="title">
-				1heroを使ったタイトル
-			</h1>
-			<h2 class="subtitle is-6">
-				ヘッダは他に「navber」があるよ
-			</h2>
+				<h1 class="title">
+					Total 
+				</h1>
+				<!-- <h2 class="subtitle">
+					Primary subtitle
+				</h2> -->
 			</div>
 		</div>
 	</section>
+
+	<div class="columns">
+		<div class="column">
+			<div class="columns is-mobile">
+				<div class="column">
+					<div class="content">
+						<ul>
+							<li><a>Total</a></li>
+							<li><a>Monthly</a></li>
+							<li><a>Input</a></li>
+						</ul>
+					</div>
+				</div>
+					<div class="column">
+						総額 153,023 円
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	
 </body>
 </html>
