--- a/money_repo/cms/templates/index.html
+++ b/money_repo/cms/templates/index.html
@@ -20,25 +20,7 @@
 		</div>
 	</section>
 
-	<div class="columns">
-		<div class="column">
-			<div class="columns is-mobile">
-				<div class="column">
-					<div class="content">
-						<ul>
-							<li><a>Total</a></li>
-							<li><a>Monthly</a></li>
-							<li><a>Input</a></li>
-						</ul>
-					</div>
-				</div>
-					<div class="column">
-						総額 153,023 円
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+	{% include "sidemenu.html" %}
 	
 </body>
 </html>
