template (block, extends)

--- a/money_repo/cms/templates/index.html
+++ b/money_repo/cms/templates/index.html
@@ -1,4 +1,11 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
+
+{% block title %}トップページ{% endblock %}
+
+{% block body %}
+<p>トップページです</p>
+{% endblock%}
+<!--<!DOCTYPE html>
 <html lang="ja">
 <head>
     <meta charset="utf-8">
@@ -13,9 +20,9 @@
 				<h1 class="title">
 					Total 
 				</h1>
-				<!-- <h2 class="subtitle">
+				<h2 class="subtitle">
 					Primary subtitle
-				</h2> -->
+				</h2>
 			</div>
 		</div>
 	</section>
@@ -23,4 +30,5 @@
 	{% include "sidemenu.html" %}
 	
 </body>
-</html>
+</html>-->
+
