--- a/money_repo/cms/templates/index.html
+++ b/money_repo/cms/templates/index.html
@@ -7,6 +7,10 @@
 	<p class="heading">Tweets</p>
 	<p class="title">3,456</p>
 
+	<span class="icon">
+		<i class="fas fa-home"></i>
+	</span>
+	
 	<!--graph-->
 	<canvas id="myLineChart"></canvas>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
