--- a/money_repo/cms/templates/base.html
+++ b/money_repo/cms/templates/base.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>django</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css" />
+	<script src="https://kit.fontawesome.com/47ce4e5509.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
