--- a/money_repo/cms/templates/yearly.html
+++ b/money_repo/cms/templates/yearly.html
@@ -3,5 +3,8 @@
 {% block title %}Yearly{% endblock %}
 
 {% block body %}
-<p>Yearlyページです</p>
+{% for year in years %}
+  <p>{{ year }}</p>
+  <hr>
+{% endfor %}
 {% endblock%}
