add import pages

--- a/money_repo/cms/templates/base.html
+++ b/money_repo/cms/templates/base.html
@@ -36,6 +36,13 @@
 					<li><a href="{% url 'monthly' %}">Monthly</a></li>
 					<li><a href="{% url 'month' %}">Month</a></li>
 				</ul>
+				<p class="menu-label">
+					Import
+				</p>
+				<ul class="menu-list ">
+					<li><a href="{% url 'bankbook' %}">Bank Book</a></li>
+					<li><a href="{% url 'detail' %}">Detail</a></li>
+				</ul>
 			</aside>
 		</div>
 
