--- a/money_repo/cms/templates/import/bankbook.html
+++ b/money_repo/cms/templates/import/bankbook.html
@@ -16,30 +16,25 @@
 	<!--Uploader-->
 	<div class="box">
 		<p class="title">Upload</p>
-		<form action="{% url 'upload' %}" method="post" enctype="multipart/form-data">
+		<!--<form action="{% url 'upload' %}" method="post" enctype="multipart/form-data">-->
+		<form method="post" enctype="multipart/form-data">
 			{% csrf_token %}
+
 			<!--select bank-->
 			<div class="select">
-				<select id="bank">
-					<option value="" style="display: none;">Select a Bank</option>
-					{% for bank in banks %}
-					<option>{{ bank }}</option>
-					{% endfor %}
-				</select>
+				{% for field in form %}
+				{{ field }}
+				{% endfor %}
+				{% csrf_token %}
 			</div>
+
 			<!--file loader-->
 			<input type="file" class="dropify" data-default-file="ファイルを選択してください" name="csv">
 			<button type="submit" class="button" name="button">アップロード</button>
+
 		</form>
 	</div>
 	
-	<form method="POST" aciton="">
-		{% for field in form %}
-		{{ field }}
-		{% endfor %}
-		{% csrf_token %}
-	</form>
-
 	<!--Table-->
 	<div class="table-container">
 		<table class="table table is-striped">
