--- a/money_repo/cms/templates/import/bankbook.html
+++ b/money_repo/cms/templates/import/bankbook.html
@@ -15,51 +15,77 @@
 
 	<!--Uploader-->
 	<div class="box">
-		<p class="title">Upload</p>
+		<p class="title">Import Bankbook</p>
 		<!--<form action="{% url 'upload' %}" method="post" enctype="multipart/form-data">-->
 		<form method="post" enctype="multipart/form-data">
 			{% csrf_token %}
 
 			<!--select bank-->
-			<div class="select">
-				{% for field in form %}
-				{{ field }}
-				{% endfor %}
-				{% csrf_token %}
+			<div class="field is-horizontal">
+				<div class="field-label is-normal">
+					<label class="label">Bank</label>
+				</div>
+				<div class="field-body">
+					<p class="control">
+						<div class="select">
+							{% for field in form %}
+							{{ field }}
+							{% endfor %}
+							{% csrf_token %}
+						</div>
+					</p>
+				</div>
 			</div>
 
-			<!--file loader-->
-			<input type="file" class="dropify" data-default-file="ファイルを選択してください" name="csv">
-			<button type="submit" class="button" name="button">アップロード</button>
+			<!--select csv-->
+			<div class="field is-horizontal">
+				<div class="field-label is-normal">
+					<label class="label">Bankbook</label>
+				</div>
+				<div class="field-body">
+					<div class="control">
+						<div id="file-js-example" class="file has-name is-right">
+							<label class="file-label">
+								<input class="file-input" type="file" name="csv">
+									<span class="file-cta">
+										<span class="file-icon">
+											<i class="fas fa-upload"></i>
+										</span>
+										<span class="file-label">
+											Choose a CSV
+										</span>
+									</span>
+									<span class="file-name">
+									</span>
+								</input>
+							</label>
+						</div>
+						<script>
+							const fileInput = document.querySelector('#file-js-example input[type=file]');
+							fileInput.onchange = () => {
+								if (fileInput.files.length > 0) {
+									const fileName = document.querySelector('#file-js-example .file-name');
+									fileName.textContent = fileInput.files[0].name;
+								}
+							}
+						</script>
+					</div>
+				</div>
+			</div>
+
+			<div class="field is-grouped is-grouped-centered">
+				<p class="control">
+					<button type="submit" class="button is-link" name="upload">
+						<span class="icon">
+							<i class="fas fa-file-upload"></i>
+						</span>
+						<span>Upload</span>
+					</button>
+				</p>
+			</div>
 
 		</form>
 	</div>
-	
-	<!--Table-->
-	<div class="table-container">
-		<table class="table table is-striped">
-			<thead>
-				<tr>
-					<th>Date</th>
-					<th>In</th>
-					<th>Out</th>
-					<th>Client</th>
-					<th>Balance</th>
-				</tr>
-				</thead>
-				<tbody>
-				{% for bankBook in bankBooks %}
-				<tr>
-					<td>bankBook.date</td>
-					<td>bankBook.in</td>
-					<td>bankBook.out</td>
-					<td>bankBook.client</td>
-					<td>bankBook.balance</td>
-				</tr>
-				{% endfor %}
-		</tbody>
-		</table>
-	</div>
-	
+
 </nav>
 {% endblock%}
