--- a/money_repo/cms/templates/base.html
+++ b/money_repo/cms/templates/base.html
@@ -35,13 +35,15 @@
 					<li><a href="{% url 'year' %}">Year</a></li>
 					<li><a href="{% url 'monthly' %}">Monthly</a></li>
 					<li><a href="{% url 'month' %}">Month</a></li>
+					<li><a href="{% url 'budget' %}">Budget</a></li>
 				</ul>
 				<p class="menu-label">
 					Import
 				</p>
 				<ul class="menu-list ">
-					<li><a href="{% url 'bankbook' %}">Bank Book</a></li>
-					<li><a href="{% url 'detail' %}">Detail</a></li>
+					<li><a href="{% url 'bankbook' %}">Bankbook</a></li>
+					<li><a href="{% url 'incomes' %}">Incomes</a></li>
+					<li><a href="{% url 'expenses' %}">Expenses</a></li>
 				</ul>
 			</aside>
 		</div>
