--- a/money_repo/cms/templates/month.html
+++ b/money_repo/cms/templates/month.html
@@ -3,95 +3,118 @@
 {% block title %}Month{% endblock %}
 
 {% block body %}
-	<nav class="breadcrumb" aria-label="breadcrumbs">
-		<ul>
-			<li><a href="#">Bulma</a></li>
-			<li><a href="#">Documentation</a></li>
-			<li><a href="#">Components</a></li>
-			<li class="is-active"><a href="#" aria-current="page">Breadcrumb</a></li>
-		</ul>
-	</nav>
+<nav class="breadcrumb" aria-label="breadcrumbs">
+	<ul>
+		<li><a href="#">Bulma</a></li>
+		<li><a href="#">Documentation</a></li>
+		<li><a href="#">Components</a></li>
+		<li class="is-active"><a href="#" aria-current="page">Breadcrumb</a></li>
+	</ul>
+</nav>
 
-	<!--Month-->
-	<!--
-	<nav class="level">
-		<div class="level-left">
+<!--Month-->
+<!--
+<nav class="level">
+	<div class="level-left">
+		<div class="level-item has-text-right">
+			<div>
+				<p class="is-size-2">August</p>
+				<p class="is-size-6">2020</p>
+			</div>
+		</div>
+		<div class="level-item">
+			<input class="input" type="month" min="2014-01" max="2015-12"></input>
+		</div>
+	</div>
+	<div class="level-right">
+	</div>
+</nav>
+-->
+
+<!--<section class="section">
+	<div class="container">
+		<div class="columns">
+			<div class="column">
+				<p class="is-size-2">August</p>
+				<p class="is-size-6">2020</p>
+			</div>
+			<div class="column">
+				<input type="month" min="2014-01" max="2015-12"></input>
+			</div>
+		</div>
+	</div>
+</section>-->
+
+<div class="field">
+	<div class="field-body">
+		<p class="control">
+			<input type="month" class="input" min="2014-01" max="2015-12"></input>
+		</p>
+	</div>
+</div>
+
+<!--Overview-->
+<div class="field>
+	<p class="control">
+		<nav class="level">
 			<div class="level-item has-text-right">
 				<div>
-					<p class="is-size-2">August</p>
-					<p class="is-size-6">2020</p>
+				<p class="heading">Revenue </p>
+				<p class="title has-text-info">3,456</p>
 				</div>
 			</div>
-			<div class="level-item">
-				<input class="input" type="month" min="2014-01" max="2015-12"></input>
-			</div>
-		</div>
-		<div class="level-right">
-		</div>
-	</nav>
-	-->
-
-	<section class="section">
-		<div class="container">
-			<div class="columns">
-				<div class="column">
-					<p class="is-size-2">August</p>
-					<p class="is-size-6">2020</p>
-				</div>
-				<div class="column">
-					<input type="month" min="2014-01" max="2015-12"></input>
+			<div class="level-item has-text-right ">
+				<div>
+				<p class="heading">Income</p>
+				<p class="title has-text-info">123</p>
 				</div>
 			</div>
-		</div>
-	</section>
+			<div class="level-item has-text-right">
+				<div>
+				<p class="heading">Expenses</p>
+				<p class="title has-text-danger">456K</p>
+				</div>
+			</div>
+		</nav>
+	</p>
+</div>
 
-	<p class="heading">Tweets</p>
-	<p class="title">3,456</p>
+<!--Table-->
+<div class="table-container">
+	<table class="table table is-striped">
+		<thead>
+			<tr>
+				<th>ID</th>
+				<th>Amont</th>
+				<th>Date</th>
+				<th>Kind</th>
+				<th>Note</th>
+			</tr>
+			</thead>
+			<tbody>
+			<tr>
+				<th>1</th>
+				<td>38</td>
+				<td>38</td>
+				<td>23</td>
+				<td>12</td>
+			</tr>
+			<tr>
+				<th>1</th>
+				<td>38</td>
+				<td>38</td>
+				<td>23</td>
+				<td>12</td>
+			</tr>
+			<tr>
+				<th>1</th>
+				<td>38</td>
+				<td>23</td>
+				<td>23</td>
+				<td>12</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
 
-	<!--graph-->
-	<div class="box">
-		<canvas id="myLineChart"></canvas>
-	</div>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
-	<script>
-	var ctx = document.getElementById("myLineChart");
-	var myLineChart = new Chart(ctx, {
-		type: 'line',
-		data: {
-		labels: ['8月1日', '8月2日', '8月3日', '8月4日', '8月5日', '8月6日', '8月7日'],
-		datasets: [
-			{
-			label: '最高気温(度）',
-			data: [35, 34, 37, 35, 34, 35, 34, 25],
-			borderColor: "rgba(255,0,0,1)",
-			backgroundColor: "rgba(0,0,0,0)"
-			},
-			{
-			label: '最低気温(度）',
-			data: [25, 27, 27, 25, 26, 27, 25, 21],
-			borderColor: "rgba(0,0,255,1)",
-			backgroundColor: "rgba(0,0,0,0)"
-			}
-		],
-		},
-		options: {
-		title: {
-			display: true,
-			text: '気温（8月1日~8月7日）'
-		},
-		scales: {
-			yAxes: [{
-			ticks: {
-				suggestedMax: 40,
-				suggestedMin: 0,
-				stepSize: 10,
-				callback: function(value, index, values){
-				return  value +  '度'
-				}
-			}
-			}]
-		},
-		}
-	});
-	</script>
 {% endblock%}
