--- a/money_repo/cms/templates/import/incomes.html
+++ b/money_repo/cms/templates/import/incomes.html
@@ -17,7 +17,7 @@
 <div class="field">
 	<div class="field-body">
 		<p class="control">
-			{{ form.select }}
+			{{ form.input }}
 		</p>
 	</div>
 </div>
