--- a/money_repo/cms/templates/import/expenses.html
+++ b/money_repo/cms/templates/import/expenses.html
@@ -13,6 +13,14 @@
 	</ul>
 </nav>
 
+<div class="field">
+	<div class="field-body">
+		<p class="control">
+			<input type="month" class="input" min="2014-01" max="2015-12" value="{{ year }}-{{ month }}" onchange="console.log('aaa')"></input>
+		</p>
+	</div>
+</div>
+
 <!--Table-->
 <div class="table-container">
 	<table class="table table is-striped">
