--- a/money_repo/cms/templates/base.html
+++ b/money_repo/cms/templates/base.html
@@ -43,7 +43,7 @@
 				<ul class="menu-list ">
 					<li><a href="{% url 'bankbook' %}">Bankbook</a></li>
 					<li><a href="{% url 'incomes' %}">Incomes</a></li>
-					<li><a href="{% url 'expenses' 2020 8 %}">Expenses</a></li>
+					<li><a href="{% url 'expenses-this-year' %}">Expenses</a></li>
 				</ul>
 			</aside>
 		</div>
