modify and delete from modal

--- a/money_repo/cms/templates/base.html
+++ b/money_repo/cms/templates/base.html
@@ -44,6 +44,7 @@
 					<li><a href="{% url 'bankbook' %}">Bankbook</a></li>
 					<li><a href="{% url 'incomes' %}">Incomes</a></li>
 					<li><a href="{% url 'expenses-this-month' %}">Expenses</a></li>
+					<li><a href="{% url 'credit-card' %}">Credit Card</a></li>
 				</ul>
 			</aside>
 		</div>
